--- a/static_files/assets/css/style.css
+++ b/static_files/assets/css/style.css
@@ -998,6 +998,7 @@ img.portfolio-img{
 
 .team .member {
   position: relative;
+  width: 100%;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   padding: 10px;
   border-radius: 10px;
